<resources>

    // Comunes

    <string name="app_name">InmunoApp</string>
    <string name="logoDescription">Logo InmunoApp</string>
    <string name="next">Siguiente</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="errorOccurred">¡Ha surgido algún error!</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="change">Cambiar</string>
    <string name="noInfo">Sin información</string>
    <string name="writeEmail">Rellene el campo de correo electrónico</string>
    <string name="writePassword">Rellene del campo de contraseña</string>
    <string name="save">Guardar</string>

    // fragment_user.xml

    <string name="account">Gestionar cuenta</string>
    <string name="changeEmail">Cambiar mi correo electrónico</string>
    <string name="changePassword">Cambiar mi contraseña</string>
    <string name="deleteAccount">Borrar mi cuenta</string>
    <string name="personalAccount">Personalización cuenta</string>
    <string name="selectLanguage">Escoger idioma</string>
    <string name="selectTheme">Escoger tema</string>
    <string name="logout">Cerrar sesión</string>

    // UserFragment

    <string name="confirmDeleteAccount">Confirmar borrado de cuenta</string>
    <string name="deleteAccountQuestion">¿Estás seguro de que deseas borrar tu cuenta? Esta acción no se puede deshacer.</string>
    <string name="errorDeleteAccount">Error al borrar la cuenta</string>
    <string name="titleChangePassword">Cambio de contraseña</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="passwordChanged">Contraseña cambiada con éxito</string>
    <string name="passwordNotChanged">Escoja otra contraseña y revise los campos</string>
    <string name="errorChangePassword">Las contraseñas no coinciden o están vacias</string>
    <string name="userNotRegistered">Usuario no registrado</string>
    <string name="changeEmailTitle">Cambio de correo electrónico</string>
    <string name="writeNewEmail">Introduzca su nuevo email</string>
    <string name="confirmNewEmail">Confirma tu nuevo email</string>
    <string name="errorEmailChange">Los correos electrónicos no coinciden o tienen un formato inválido</string>
    <string name="current_email">Correo electrónico actual: %1$s</string>
    <string name="verification_email_sent">Correo de verificación enviado a %1$s</string>

    // activity_login.xml

    <string name="loginEmail">Introduzca su correo electrónico</string>
    <string name="loginPassword">Introduzca su contraseña</string>
    <string name="noAccount">¿No tienes cuenta todavía?</string>
    <string name="resetPassword">¿Has olvidado tu contraseña?</string>

    // LoginActivity

    <string name="changePasswordQuestion">¿Desea cambiar su contraseña?</string>
    <string name="writeEmailPassword">Introduzca su correo electrónico para recibir un enlace</string>
    <string name="emailSent">Enlace mandado a su correo electrónico</string>
    <string name="incorrectData">Los datos introducidos son incorrectos</string>

    // activity_register.xml

    <string name="registro">Registro</string>
    <string name="form">Completa el siguiente formulario</string>
    <string name="registerName">Nombre y apellidos</string>
    <string name="registerEmail">Correo electrónico</string>
    <string name="registerNumber">Número de teléfono</string>
    <string name="registerPassword">Contraseña</string>
    <string name="caractersPassword">La contraseña debe tener al menos 6 caracteres</string>
    <string name="registerPassword2">Repetir contraseña</string>
    <string name="rol">Seleccione su rol:</string>
    <string name="gender">Seleccione su género:</string>
    <string name="patient">Paciente</string>
    <string name="user">Usuario</string>
    <string name="doctor">Médico</string>
    <string name="register">Registrarse</string>
    <string name="backLogin">Ya tengo una cuenta</string>
    <string name="height">Altura (cm)</string>
    <string name="weight">Peso (kg)</string>
    <string name="dateBirth">Fecha de nacimiento (dd/mm/aaaa)</string>


    <string-array name='genderArray'>
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Prefiero no decirlo</item>
    </string-array>


    // RegisterActivity

    <string name="validEmail">Introduzca un correo electrónico válido</string>
    <string name="writeNumber">Introduzca su número de teléfono</string>
    <string name="validNumber">Introduzca un número de teléfono válido</string>
    <string name="shortPassword">La contraseña debe tener al menos 6 caracteres</string>
    <string name="writeName">Introduzca sus apellidos</string>
    <string name="confirmPassword">Confirme su contraseña</string>
    <string name="validPassword">Las contraseñas no coinciden</string>
    <string name="selectRol">Por favor seleccione su rol</string>
    <string name="registerFailed">Registro fallido, vuelva a intentarlo más tarde</string>
    <string name="writeWeight">Introduzca su peso en kilogramos</string>
    <string name="writeHeight">Introduzca su altura en centímetros</string>
    <string name="writeAge">Introduzca su fecha de nacimiento</string>
    <string name="validAge">Introduzca una fecha de nacimiento con su formato</string>
    <string name="writeGender">Por favor seleccione un género</string>

    // patientApater y PatientsFragment

    <string name="sortList">Lista ordenada por: </string>
    <string name="bindAge">Edad: %1$d</string>
    <string name="bindHeight">Altura: %1$d cm</string>
    <string name="bindWeight">Peso: %1$d kg</string>

    <string-array name="orderPatients">
        <item>Nombre (A-Z)</item>
        <item>Nombre (Z-A)</item>
        <item>Edad (Cre)</item>
        <item>Edad (Decre)</item>
    </string-array>

    // activity_patient_detail.xml

    <string name="back_button">Back</string>
    <string name="launch_button">Launch</string>
    <string name="imageButtonToggle">Toggle</string>

    <string name="genderD">GÉNERO</string>
    <string name="ageD">EDAD</string>
    <string name="heightD">ALTURA</string>
    <string name="weightD">PESO</string>
    <string name="treatment">Tratamiento</string>
    <string name="graphics">Gráficas de las medidas</string>
    <string name="selectImmunotherapy">Inmunoterapia</string>

    <string-array name="immunotherapyTypes">
        <item>Vacunas</item>
        <item>Interferón</item>
        <item>Interlucina 2</item>
        <item>TILs</item>
        <item>CAR</item>
        <item>TCR</item>
        <item>CTLA 4</item>
        <item>PD 1</item>
        <item>PD-L1</item>
        <item>Combinación inhibidores</item>
    </string-array>

    <string name="currentFollowing">Actualmente siguiendo: %s</string>
    <string name="hasFollowed">En el pasado siguió:</string>
    <string name="typeImmunotherapy">Escoja un tipo para cambiarla:</string>
    <string name="changeImmunotherapy">Cambiar tratamiento</string>
    <string name="threshold">Valores umbral</string>
    <string name="temperature">Temperatura máxima (ºC): </string>
    <string name="cardFrequency">Frecuencia cardíaca (pulsos/min):</string>
    <string name="máx">Máxima</string>
    <string name="min">Mínima</string>
    <string name="respFrequency">Frecuencia respiratoria (resp/min):</string>
    <string name="thresholdSuccessful">¡Valores cambiados con éxito!</string>
    <string name="changeThreshold">Guardar umbrales seleccionados</string>
    <string name="symptoms">Síntomas</string>
    <string name="addSymptoms">Escriba la nueva toxicidad</string>
    <string name="add">Añadir</string>
    <string name="listedSymptoms">Las toxicidades son: </string>
    <string name="deleteSymptoms">Escriba la toxicidad a eliminar</string>
    <string name="delete">Borrar</string>

    <string name="selectMeasureType">Escoja primero el tipo:</string>

    <string-array name="measuresTypes">
        <item>Presión sanguínea</item>
        <item>Frecuencia respiratoria</item>
        <item>Frecuencia cardíaca</item>
        <item>Saturación sanguínea</item>
    </string-array>

    <string name="starDate">Fecha inicial</string>
    <string name="endDate">Fecha final</string>
    <string name="overTime">en el tiempo</string>
    <string name="bloodPessure">Presión sanguínea</string>
    <string name="respFreq">Frecuencia respiratoria</string>
    <string name="cardFreq">Frecuencia cardíaca</string>
    <string name="satOxygen">Saturación sanguínea</string>

    <string name="aboutImmunotherapy">Sobre la inmunoterapia del paciente</string>
    <string name="aboutToxicities">Sobre las toxicidades del paciente</string>

    <string name="generateEHR">Generar fichero pdf con formato HCE</string>

    // patientDetailActivity

    <string name="setHeightView">%1$d cm</string>
    <string name="setWeightView">%1$d kg</string>
    <string name="enterSymptom">Introduzca un valor antes para borrarlo</string>
    <string name="deletedSymptom">Síntoma borrado con éxito</string>
    <string name="notDeletedSymptom">¡No se ha podido borrar el síntoma!</string>
    <string name="notFoundSymptom">No se ha encontrado el síntoma introducido</string>
    <string name="emptySymptom">Escriba un síntoma antes de añadirlo</string>

    <string name="abdominal_pain">Dolor en el abdomen</string>
    <string name="asthenia">Astenia</string>
    <string name="chest_pain">Dolor en el tórax</string>
    <string name="cough">Tos</string>
    <string name="dyspnoea">Disnea</string>
    <string name="nausea">Nusea´s</string>
    <string name="vomits">Vómitos</string>
    <string name="bowel_movements_average">Media diaria de las deposiciones: %1$s</string>
    <string name="consistency">Consistencia de las deposiciones</string>
    <string name="composition">Las deposiciones contienen</string>
    <string name="acuosas">Acuosas</string>
    <string name="liquidas">Líquidas</string>
    <string name="solidas">Sólidas</string>
    <string name="sangre">Sangre</string>
    <string name="mucosidad">Mucosidad</string>
    <string name="ninguno">Ninguno</string>
    <string name="relevantSymptom">Los síntomas relevantes de la app del paciente son:</string>
    <string name="wrongFormatDate">No hay valores entre las fechas escogidas</string>
    <string name="noPermission">Permiso no concedido, no se te enviarán notificaciones</string>
    <string name="temperature_alert_title">Alerta de Temperatura Alta</string>
    <string name="temperature_alert_content">%1$s ha registrado una temperatura de %2$.1f°C el %3$s</string>
    <string name="measure_alert_title">Alerta de %1$s</string>
    <string name="measure_alert_content">%1$s ha registrado un valor de %2$d para la %3$s el %4$s</string>

    <string name="Endocrinopathy">Endocrinopatía</string>
    <string name="GItoxicity">Toxicidad gastrointestinal</string>
    <string name="Generalsymptoms">Síntomas generales</string>
    <string name="Hepatotoxicity">Hepatotoxicidad</string>
    <string name="Othertoxicities">Otras toxicidades</string>
    <string name="Skintoxicity">Toxicidad cutánea</string>

    // ToxAdapter

    <string name="toxicity">Toxicidad: %s</string>
    <string name="presentation">Presentación: %s</string>
    <string name="baseline_monitoring">Monitoreo inicial: %s</string>
    <string name="diagnosis">Diagnóstico: %s</string>
</resources>